# vrg

./: CLAUDE.md  README.md  pyproject.toml  vrg.spec
.claude/plans/: 2026-04-16-help-02-network.md  2026-04-16-help-03-tenant.md  2026-04-16-help-04-nas.md  2026-04-16-help-05-node-cluster.md  2026-04-16-help-06-storage-snapshot.md  2026-04-16-help-09-task.md  2026-04-16-help-10-recipe-catalog.md  2026-04-16-help-11-tag-resource-group.md  2026-04-16-help-15-misc.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
docs/: ARCHITECTURE.md  COMMANDS.md  CONTRIBUTING.md  COOKBOOK.md
packaging/homebrew/: vrg.rb
scripts/: generate_homebrew_formula.py
src/verge_cli/: __init__.py  cli.py  columns.py  multi.py
src/verge_cli/commands/: _query_helpers.py  alarm.py  alarm_history.py  api_key.py  auth_source.py  billing.py  catalog.py  catalog_log.py  catalog_repo.py  catalog_repo_log.py  certificate.py  cluster.py  completion.py  configure.py  doctor.py  file.py  gpu.py  group.py  log.py  nas.py  nas_cifs.py  nas_files.py  nas_nfs.py  nas_service.py  nas_sync.py  nas_user.py  nas_volume.py  nas_volume_snapshot.py  network.py  network_alias.py  network_dashboard.py  network_diag.py  network_dns.py  network_host.py  network_query.py  network_rule.py  node.py  node_lldp.py  node_nic.py  node_query.py  (+55 more)
tests/: conftest.py
tests/shakedown/: shakedown-2026-04-16-1.md  shakedown.md
tests/unit/: test_cli.py  test_doctor.py  test_multi.py  test_network_diag_monitor.py  test_network_query.py  test_network_rule.py  test_node_lldp.py  test_node_nic.py  test_node_query.py  test_query_helpers.py  test_system_diag.py  test_tenant_storage.py
