[project]
name = "vrg"
version = "1.0.1"
description = "Command-line interface for VergeOS"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Verge.io", email = "support@verge.io" },
]
keywords = ["vergeos", "cli", "virtualization", "cloud"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "pyvergeos>=1.2.2",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "tomli>=2.0; python_version<'3.11'",
    "tomli-w>=1.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "types-PyYAML>=6.0",
    "types-jsonschema>=4.0",
]

[project.scripts]
vrg = "verge_cli.cli:app"

[project.urls]
Homepage = "https://www.verge.io"
Documentation = "https://docs.verge.io"
Repository = "https://github.com/verge-io/vrg"
Issues = "https://github.com/verge-io/vrg/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/verge_cli"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["verge_cli"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["tomli", "tomli.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "verge_cli.utils"
# SDK returns Any types, difficult to fix without casts everywhere
warn_return_any = false

[[tool.mypy.overrides]]
module = "verge_cli.auth"
# typer.Choice is a click type wrapper, mypy stubs incomplete
disable_error_code = ["attr-defined"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
